--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@
     <h1>Привет, мир!</h1>
 </body>
 </html>
+ <a href="krossvordRU.html" class="link">Русский кроссворд</a>
+    <a href="krossvordEN.html" class="link">English Crossword</a>
