--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+<head></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Привет, мир!</title>
 </head>
 <body>
-    <h1>Привет, мир!</h1>
 </body>
 </html>
  <a href="krossvordRU.html" class="link">Русский кроссворд</a>
