--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 </body>
+    <p><a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
+    </p> 
 </html>
  <a href="krossvordRU.html" class="link">Русский кроссворд</a>
     <a href="krossvordEN.html" class="link">English Crossword</a>
