--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Мой блог</title>
 </head>
 <body>
+    <h2> 3 декабря, 2025</h2>
+    <p>
 </body>
-    <p>Иконки<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
+    <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
     </p> 
 </html>
  <a href="krossvordRU.html" class="link">Русский кроссворд</a>
