--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     <h2> 3 декабря, 2025</h2>
+    <img src=“Icons/free-icon-christmas-tree-4060984.png” alt=“Новый год”>
+    Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+ <h2> 3 декабря, 2025 </h2>
+    
     <p>
+Я сделала Новогодние кроссворды для сайта <a href=“https://hotchan7.github.io/dem-github.io/”  title=“Блог моего друга”hotchan7/dem-github.io</a>
+        </p>
+    <h2> 3 декабря, 2025 </h2>
+    <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+    <p>
+    Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+      </p>  
 </body>
     <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
     </p> 
