--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <title>С Новым годом поздравляю!
+Пусть счастливым будет год.
+Пусть удачу, мир и счастье
+Дед Мороз вам принесет!</title>
     <meta charset="UTF-8">
     <title>Минимальная HTML-страница</title>
 </head>
