--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Мой блог</title>
 </head>
 <body>
-    <h2> 3 декабря, 2025</h2>
-    <img src=“Icons/free-icon-christmas-tree-4060984.png” alt=“Новый год”>
-    Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+    <h2> 15 декабря, 2025</h2>
+    <source src="/https://content-studio.sberdevices.ru/media/019b2191-1921-75a0-aaf8-32124cc72e05/019b2199-d31d-71b9-8d7c-5b64ea6c9eb1.mp4#t=0.001> 
+        Поздравление с Наступающим 2026 годом читайте <a href=“колядки.pdf”> здесь.</a>
  <h2> 3 декабря, 2025 </h2>
     
     <p>
@@ -26,3 +26,4 @@
 </html>
  <a href="krossvordRU.html" class="link">Русский кроссворд</a>
     <a href="krossvordEN.html" class="link">English Crossword</a>
+
