--- a/index.html
+++ b/index.html
@@ -1,29 +1,56 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head><title>
-    <link type=“text/css” rel=“stylesheet” href=“style.css” />
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мой блог</title>
+    <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h2> 15 декабря, 2025</h2>
-    <source src="/https://content-studio.sberdevices.ru/media/019b2191-1921-75a0-aaf8-32124cc72e05/019b2199-d31d-71b9-8d7c-5b64ea6c9eb1.mp4#t=0.001> 
-        Поздравление с Наступающим 2026 годом читайте <a href=“колядки.pdf”> здесь.</a>
- <h2> 3 декабря, 2025 </h2>
-    
-    <p>
-Я сделала Новогодние кроссворды для сайта <a href=“https://hotchan7.github.io/dem-github.io/”  title=“Блог моего друга”hotchan7/dem-github.io</a>
-        </p>
-    <h2> 3 декабря, 2025 </h2>
-    <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
-    <p>
-    Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
-      </p>  
-</body>
-    <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
-    </p> 
-</html>
- <a href="krossvordRU.html" class="link">Русский кроссворд</a>
-    <a href="krossvordEN.html" class="link">English Crossword</a>
 
+    <!-- Поздравление с Рождеством -->
+    <h1>Поздравление с Рождеством</h1>
+    <p>
+        Тихо ангел пропел: «Славь!» —<br>
+        Бог с небес сошёл к нам в лад!<br>
+        Пусть не будет в доме зла,<br>
+        Только свет, любовь и лад!<br>
+        КОЛЯДКИ
+    </p>
+
+    <!-- Запись от 15 декабря 2025 -->
+    <h2>15 декабря, 2025</h2>
+    <p>Видео уже загружено: <code>019b2199-d31d-71b9-8d7c-5b64ea6c9eb1.mp4</code></p>
+    <video width="640" height="360" controls preload="metadata">
+        <source src="https://content-studio.sberdevices.ru/media/019b2191-1921-75a0-aaf8-32124cc72e05/019b2199-d31d-71b9-8d7c-5b64ea6c9eb1.mp4" type="video/mp4">
+        Ваш браузер не поддерживает воспроизведение видео.
+    </video>
+    <p>Поздравление с Наступающим 2026 годом читайте <a href="колядки.pdf">здесь</a>.</p>
+
+    <!-- Запись от 3 декабря 2025 (кроссворды) -->
+    <h2>3 декабря, 2025</h2>
+    <p>
+        Я сделала Новогодние кроссворды для сайта 
+        <a href="https://hotchan7.github.io/dem-github.io/" title="Блог моего друга">hotchan7/dem-github.io</a>.
+    </p>
+
+    <!-- Ссылки на кроссворды -->
+    <p>
+        <a href="krossvordRU.html" class="link">Русский кроссворд</a> |
+        <a href="krossvordEN.html" class="link">English Crossword</a>
+    </p>
+
+    <!-- Цитата -->
+    <h2>3 декабря, 2025</h2>
+    <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</blockquote>
+    <p>
+        Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+    </p>
+
+    <!-- Иконки Flaticon -->
+    <p>
+        Иконки: <a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская ёлка иконки">Рождественская ёлка иконки от IconMarketPK — Flaticon</a>
+    </p>
+
+</body>
+</html>
