--- a/index.html
+++ b/index.html
@@ -27,28 +27,25 @@
     </video>
     <p>Поздравление с Наступающим 2026 годом читайте <a href="колядки.pdf">здесь</a>.</p>
 
-    <!-- Запись от 3 декабря 2025 (кроссворды) -->
+    <!-- Запись от 3 декабря 2025 -->
     <h2>3 декабря, 2025</h2>
     <p>
         Я сделала Новогодние кроссворды для сайта 
         <a href="https://hotchan7.github.io/dem-github.io/" title="Блог моего друга">hotchan7/dem-github.io</a>.
     </p>
-
-    <!-- Ссылки на кроссворды -->
     <p>
         <a href="krossvordRU.html" class="link">Русский кроссворд</a> |
         <a href="krossvordEN.html" class="link">English Crossword</a>
     </p>
-
-    <!-- Цитата -->
-    <h2>3 декабря, 2025</h2>
     <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</blockquote>
     <p>
         Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
     </p>
+
+    <!-- Источник иконок -->
     <p>
         Иконки: <a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская ёлка иконки">Рождественская ёлка иконки от IconMarketPK — Flaticon</a>
     </p>
 
 </body>
-</html> 
+</html>
