--- a/index.html
+++ b/index.html
@@ -46,6 +46,53 @@
     <p>
         Иконки: <a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская ёлка иконки">Рождественская ёлка иконки от IconMarketPK — Flaticon</a>
     </p>
+    </head>
+<!-- ССЫЛКА НА ПОЧТУ В САМОМ НАЧАЛЕ -->
+  <div class="contact">
+    📧 Написать мне: <a href="mailto:majtabagalieba@gmail.com">majtabagalieba@gmail.com</a>
+  </div>
+
+  <h1>Из каких имён состоит домен моего сайта?</h1>
+  
+  <p><strong>Дата публикации:</strong> 12 января 2026 года</p>
+  
+  <p>Адрес моего сайта: <code>https://majtab109.github.io</code></p>
+
+  <div class="note">
+    ⚠️ Обрати внимание: запись <code>majtab109/dem.github.io</code> — это не доменное имя.  
+    Настоящий домен — только <code>majtab109.github.io</code>.  
+    Часть <code>/dem</code> — это путь к проекту, а не часть домена.
+  </div>
+
+  <h2>Структура доменного имени по уровням иерархии</h2>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Уровень</th>
+        <th>Имя</th>
+        <th>Что это?</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1-й (TLD)</td>
+        <td><code>io</code></td>
+        <td>Домен верхнего уровня (изначально для Британских Индийских океанических территорий, сейчас популярен в IT)</td>
+      </tr>
+      <tr>
+        <td>2-й</td>
+        <td><code>github</code></td>
+        <td>Основной домен компании GitHub — владелец зоны <code>github.io</code></td>
+      </tr>
+      <tr>
+        <td>3-й (поддомен)</td>
+        <td><code>majtab109</code></td>
+        <td>Моё имя пользователя на GitHub — автоматически становится поддоменом</td>
+      </tr>
+    </tbody>
+  </table>
+
 
 </body>
 </html>
