--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+<a herf="mailto:majtabagalieva@gmail.com"Напишите мне</a>
+    <h2>12 января, 2026</h2>
+    <h2>домен - majtab109 github io . </h2>
     <!-- Поздравление с Рождеством -->
     <h1>Поздравление с Рождеством</h1>
     <p>
