--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-<a href="mailto:majtabagalieva@gmail.com"Напишите мне</a>
+<a href="mailto:majtabagalieva@gmail.com">Напишите мне</a>
     <h2>12 января, 2026</h2>
     <h2>домен - majtab109 github io . </h2>
     
