--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <h2>Сегодня: 17 января 2026</h2>
+    <p>Решение шифров Цезаря </p>
+    <p> 1. Определение клшюча </p>
+    <p> АПЕЛЬСИН - САЦЬНВЩО - 18 </p>
+    <p> АБРИКОС - ЫЬЛГЕЙМ - 28 </p>
+    <p> 2. Расшифровка </p>
+    <p> ФХНЗКЧ - Привет - 5 </p>
+    <p> ЦЩЕБФ - Весна - 20 </p>
+    <p> 3. Шифрование фамилии </p>
+    <p> Фамилия: Агалиева </p>
+    <p> Зашифровано с ключом 10:КНКХТПМК </p>
     
 <a href="mailto:majtabagalieva@gmail.com">Напишите мне</a>
     <h2>12 января, 2026</h2>
