--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h2>Сегодня: 17 января 2026</h2>
     <p>Решение шифров Цезаря </p>
     <p> 1. Определение клшюча </p>
-    <p> АПЕЛЬСИН - САЦЬНВЩО - 18 </p>
-    <p> АБРИКОС - ЫЬЛГЕЙМ - 28 </p>
+    <p> АПЕЛЬСИН - САЦЬНВЩО k - 18 </p>
+    <p> АБРИКОС - ЫЬЛГЕЙМ k - 28 </p>
     <p> 2. Расшифровка </p>
-    <p> ФХНЗКЧ - Привет - 5 </p>
-    <p> ЦЩЕБФ - Весна - 20 </p>
+    <p> ФХНЗКЧ - Привет k - 5 </p>
+    <p> ЦЩЕБФ - Весна k - 20 </p>
     <p> 3. Шифрование фамилии </p>
     <p> Фамилия: Агалиева </p>
     <p> Зашифровано с ключом 10: КНКХТПМК </p>
