--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h2>Сегодня: 17 января 2026</h2>
     <p>Решение шифров Цезаря </p>
-    <p> 1. Определение клшюча </p>
-    <p> АПЕЛЬСИН - САЦЬНВЩО k - 18 </p>
+    <p> 1. Определение ключа </p>
+    <p> АПЕЛЬСИН - САЦЬНВЩЮ k - 18 </p>
     <p> АБРИКОС - ЫЬЛГЕЙМ k - 28 </p>
     <p> 2. Расшифровка </p>
     <p> ФХНЗКЧ - Привет k - 5 </p>
