--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-<h2>Сегодня: 17 января 2026</h2>
+<h2>17 января, 2026</h2>
 <p>Решение шифров Цезаря </p>
 <p> 1. Определение ключа </p>
 <p> АПЕЛЬСИН - САЦЬНВЩЮ k - 18 </p>
