--- a/index.html
+++ b/index.html
@@ -63,7 +63,23 @@
     </p>
     </head>
 
-
+<style>
+  body {
+    background-color: #e6f2ff;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    color: #003366;
+  }
+  .container {
+    background-color: white;
+    max-width: 960px;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  }
+</style>
 
 </body>
 </html>
