--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
     </p>
     </head>
 
+<style>
+  /* Зелёный фон всего сайта */
+  body {
+    background-color: #e6f9e6; /* нежно-зелёный */
+    margin: 0;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    color: #004d00; /* тёмно-зелёный текст для контраста */
+  }
 
+  /* Белый контент по центру — чтобы было удобно читать */
+  .container {
+    background-color: white;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+</style>
 </body>
 </html>
