--- a/index.html
+++ b/index.html
@@ -84,4 +84,9 @@
   }
 </style>
 </body>
+    <h2> 1 сентября, 2025</h2>
+    <blockquote> Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+    <p>
+    Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемироной паутины.
+    </p>
 </html>
