--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
     Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемироной паутины.
     </p>
     
-<!DOCTYPE html>
+
+</body>
+<h2> 20 января, 2026</h2>                                                                                            
+    <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
@@ -105,39 +108,24 @@
       padding: 0 20px;
       line-height: 1.6;
       color: #333;
-      background-color: #fafafa;
     }
     h1, h2 {
       color: #2c3e50;
     }
-    .date {
-      font-weight: bold;
-      font-size: 1.1em;
-      color: #e74c3c;
-      margin-bottom: 20px;
-    }
-    .step {
-      background: #ffffff;
-      padding: 16px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      margin-bottom: 20px;
-    }
-    code {
-      background: #f1f1f1;
-      padding: 2px 6px;
-      border-radius: 4px;
-      font-family: monospace;
-    }
-    .result {
-      background: #e8f5e9;
-      padding: 12px;
-      border-left: 4px solid #4caf50;
+    .key {
+      background: #f4f4f4;
+      padding: 10px;
+      border-left: 4px solid #3498db;
       margin: 15px 0;
-      font-weight: bold;
+    }
+    .note {
+      background: #fff8e1;
+      padding: 12px;
+      border-left: 4px solid #ffc107;
+      margin: 20px 0;
     }
     button {
-      background: #3498db;
+      background: #2ecc71;
       color: white;
       border: none;
       padding: 8px 16px;
@@ -146,45 +134,67 @@
       margin-top: 10px;
     }
     button:hover {
-      background: #2980b9;
+      background: #27ae60;
     }
-    #decrypt-output {
+    #result {
       margin-top: 10px;
       font-weight: bold;
       color: #27ae60;
+    }
+    .date {
+      font-weight: bold;
+      font-size: 1.1em;
+      margin-bottom: 20px;
+      color: #e74c3c;
     }
   </style>
 </head>
 <body>
 
-  <div class="date"> 21 января, 2026 года</div>
+  <div class="date">21 января 2026 года</div>
 
   <h1>🔐 Учебный пример шифрования RSA</h1>
 
-  <div class="step">
-    <h2>🔒 Зашифруем сообщение</h2>
-    <p>Пусть сообщение: <code>m = 2</code> (например, «2» означает «анализ готов»)</p>
-    <p>Условие: <code>m &lt; n</code> → <code>2 &lt; 15</code> → ✅</p>
-    <p>Формула шифрования:  
-       <code>C = m<sup>e</sup> mod n = 2<sup>3</sup> mod 15 = 8 mod 15 = 8</code></p>
-    <div class="result">→ Шифротекст: <code>C = 8</code></div>
+  <h2>1. Генерация ключей</h2>
+  <p>Выбираем простые числа:</p>
+  <ul>
+    <li><code>p = 3</code></li>
+    <li><code>q = 5</code></li>
+  </ul>
+  <p>Вычисляем:</p>
+  <ul>
+    <li><code>n = p × q = 15</code></li>
+    <li><code>φ(n) = (p−1)(q−1) = 2 × 4 = 8</code></li>
+  </ul>
+  <p>Выбираем <code>e = 3</code> (взаимно простое с 8).</p>
+  <p>Находим <code>d</code>, такое что <code>(e × d) mod φ(n) = 1</code> → <code>d = 3</code>.</p>
+
+  <div class="key">
+    <strong>Открытый ключ:</strong> <code>(n, e) = (15, 3)</code><br>
+    <strong>Закрытый ключ:</strong> <code>(n, d) = (15, 3)</code>
   </div>
 
-  <div class="step">
-    <h2>🔓 Расшифруем сообщение</h2>
-    <p>Формула расшифровки:  
-       <code>M = C<sup>d</sup> mod n = 8<sup>3</sup> mod 15 = 512 mod 15 = 2</code></p>
-    <div class="result">→ Исходное сообщение восстановлено! ✅ <code>M = 2</code></div>
+  <div class="note">
+    ⚠️ В этом примере <code>e = d</code> — это допустимо для обучения, но <strong>небезопасно</strong> в реальных системах!
   </div>
 
-  <button type="button" onclick="decrypt()">Проверить расшифровку (8³ mod 15)</button>
-  <div id="decrypt-output"></div>
+  <h2>2. Шифрование</h2>
+  <p>Сообщение: <code>m = 2</code> (например, «анализ готов»)</p>
+  <p>Условия: <code>0 &lt; m &lt; n</code> и <code>НОД(m, n) = 1</code> → выполнены.</p>
+  <p>Шифруем: <code>C = m<sup>e</sup> mod n = 2<sup>3</sup> mod 15 = 8</code></p>
+  <p>→ <strong>Шифротекст: C = 8</strong></p>
 
-  <div class="step">
-    <h2>💡 А в реальности?</h2>
-    <p>Число <code>n</code> состоит из <strong>600+ десятичных цифр</strong> (2048+ бит).<br>
-    Такие маленькие значения (<code>p = 3</code>, <code>q = 5</code>) используются <strong>только для обучения</strong>.</p>
-  </div>
+  <h2>3. Расшифровка</h2>
+  <p>Расшифровываем: <code>M = C<sup>d</sup> mod n = 8<sup>3</sup> mod 15 = 512 mod 15 = 2</code></p>
+  <p>→ <strong>Исходное сообщение восстановлено!</strong> ✅</p>
+
+  <button onclick="decrypt()">Проверить расшифровку (8³ mod 15)</button>
+  <div id="result"></div>
+
+  <h2>💡 А в реальности?</h2>
+    <p>
+Число <code>n</code> состоит из <strong>600+ десятичных цифр</strong> (2048+ бит).<br>
+  Такие маленькие числа (<code>p=3, q=5</code>) используются <strong>только для обучения</strong>.</p>
 
   <script>
     function decrypt() {
@@ -192,11 +202,10 @@
       const d = 3;
       const n = 15;
       const M = (C ** d) % n;
-      document.getElementById('decrypt-output').textContent = `Результат расшифровки: ${M}`;
+      document.getElementById('result').innerText = Результат: ${M};
     }
   </script>
 
 </body>
 </html>
-</body>
-</html>
+
