--- a/index.html
+++ b/index.html
@@ -63,27 +63,40 @@
     </p>
     </head>
 
-<style>
-  /* Зелёный фон всего сайта */
-  body {
-    background-color: #e6f9e6; /* нежно-зелёный */
-    margin: 0;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-    color: #004d00; /* тёмно-зелёный текст для контраста */
-  }
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Зелёный сайт</title>
+  <style>
+    /* Зелёный фон всего сайта */
+    body {
+      background-color: #e6f9e6; /* нежно-зелёный */
+      margin: 0;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+      color: #004d00; /* тёмно-зелёный текст для контраста */
+    }
 
-  /* Белый контент по центру — чтобы было удобно читать */
-  .container {
-    background-color: white;
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  }
-</style>
+    /* Белый контент по центру — чтобы было удобно читать */
+    .container {
+      background-color: white;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Добро пожаловать!</h1>
+    <p>Этот сайт имеет нежно-зелёный фон и белый центральный блок для удобного чтения.</p>
+  </div>
 </body>
+</html>
     <p>
     <h2> 1 сентября, 2025</h2>
     <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
